# ganuda_ai

./: .deadman_checkpoint.json  .env.discord.example  .env.example  .gitignore  .gitleaks.toml  .telegram_chat_id  10k_weekly_analysis.py  200k_aggressive_solar_explosion.py  200k_no_problem_calculation.py  2200_market_analysis.py  2300_party_mode.py  432HZ_COUNCIL_ANALYSIS.md  4D_INTEGRATION_WITH_EXISTING_PROJECTS.md  500k_eth_weekly_outflow_explosion.py  ACTIVATION_SWITCH_THEORY_VALIDATES_CHEROKEE_AI.md  ACTUAL_PORTFOLIO_STATUS.md  AI_AGENTS_TRADING_PARALLEL.md  ALTS_SIGNAL_ANALYSIS.md  ARCHITECTURE.md  AUTONOMIC_CHEROKEE_AI_THREE_LAYER_ARCHITECTURE.md  AUTONOMIC_DAEMONS_DEPLOYED.md  AUTONOMOUS_COUNCIL_DELIBERATION.md  BIGMAC_CHEROKEE_BRIDGE_SETUP.md  BIGMAC_QUICKSTART.md  BLUEFIN_DEPLOYMENT_INSTRUCTIONS.md  BLUEFIN_PORT_2223_FIX_NEEDED.md  BLUEFIN_SPOKE_RESOURCES.md  BOT_DATE_PROBLEM.txt  BOT_DIAGNOSIS.md  CANADA_RESPONSES.json  CANADA_SESSION_READY.md  CHECKPOINT_MERGING_TRIAD_DECISION.md  CHEROKEE_ADMIN_COMMAND_CENTER.md  CHEROKEE_AI_DEPLOYMENT_SUMMARY.md  CHEROKEE_AI_IN_HUMAN_THOUGHT_ARCHITECTURE.md  CHEROKEE_AI_QUICK_START.md  CHEROKEE_BEATLES_COMPLETE_VICTORY.md  CHEROKEE_COUNCIL_COLLECTIVE_DECISION.md  CHEROKEE_COUNCIL_TRAINING_STATUS.md  CHEROKEE_DISCORD_VOICE_INTEGRATION.md  (+2123 more)
services/arc_agi_3/: ARCHITECTURE.md  README.md  agent.py  dc22_fibonacci_screenshots.py  dc22_play.py  dc22_playwright_agent.py  dc22_smart_solver.py  deep_solver.py  deliberation.py  experience.py  fibonacci_explorer.py  frame_processor.py  game.py  game_experience.py  game_strategy.py  ganuda_agent.py  genetic_solver.py  goal_inferrer.py  graph_explorer.py  perception.py  planner.py  pyproject.toml  see_act_see.py  snapshot_explorer.py  swarm_runner.py  visual_agent.py  world_model.py
services/arc_agi_3/experiences/: cd82_20260412T202041Z.json  cn04_20260413T130319Z.json  ft09_20260412T201854Z.json  ft09_20260413T125735Z.json  g50t_20260412T224946Z.json  ka59_20260412T224807Z.json  lp85_20260412T201811Z.json  lp85_20260412T202924Z.json  lp85_20260413T130026Z.json  r11l_20260412T202147Z.json  r11l_20260412T211314Z.json  re86_20260413T010121Z.json  sb26_20260412T201648Z.json  sb26_20260412T223847Z.json  (+23 more)
services/ganuda-harness/: Cargo.toml  audit.jsonl  harness.toml
(+3828 files in other folders)
