[project]
name = "arc-agi-3-ganuda"
version = "0.1.0"
description = "Ganuda ARC-AGI-3 Agent"
requires-python = ">=3.12"
dependencies = [
    "arc-agi>=0.9.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.11.4",
]

[tool.ruff.lint]
extend-select = ["I"]
